--- a/sprint-1/src/styles/main.scss
+++ b/sprint-1/src/styles/main.scss
@@ -15,6 +15,21 @@ body {
 *:after {
 	box-sizing: inherit;
 }
-
+h1 {
+	font-size: 24px;
+	line-height: 32px;
+}
+h2 {
+	font-size: 14px;
+	line-height: 22px;
+}
+h4 {
+	font-size: 13px;
+	line-height: 18px;
+}
+h5 {
+	font-size: 12px;
+	line-height: 20px;
+}
 @import "./partials/header";
 @import "./partials/hero";
