--- a/sprint-1/src/styles/partials/_header.scss
+++ b/sprint-1/src/styles/partials/_header.scss
@@ -15,6 +15,7 @@
 		display: flex;
 		flex-wrap: wrap;
 	}
+
 	&__search-button {
 		background-image: url("../assets/Icons/svg/Icon-upload.svg");
 		background-repeat: no-repeat;
@@ -38,9 +39,11 @@
 	.search-bar {
 		background-image: url("../assets/Icons/svg/Icon-search.svg");
 		background-repeat: no-repeat;
-		background-position: left;
+		background-position-x: 10px;
+		background-position-y: center;
 		width: 100%;
 		height: 49px;
+		padding-left: 35px;
 		border-radius: 4px;
 	}
 }
