--- a/sprint-1/src/styles/main.css
+++ b/sprint-1/src/styles/main.css
@@ -218,12 +218,13 @@ h5 {
 .comments__input-text {
   border: 1px solid #0065ad;
   width: 70%;
+  margin-left: 12px;
   border-radius: 4px;
 }
 
 .comments__input-avatar {
-  width: 50px;
-  height: 50px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
   margin: 8px 5px 32px;
 }
@@ -243,5 +244,29 @@ h5 {
   color: #fff;
   background-color: #0095ff;
   border-radius: 4px;
+}
+
+.comments .comments__input-div-avatar {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin: 8px 5px 32px;
+  float: left;
+}
+
+.comments .comments__input-div-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 80%;
+}
+
+.comments .comments__input-div-date {
+  height: 20px;
+  margin-top: 20px;
+  margin-left: 5px;
+  opacity: 0.5;
 }
 /*# sourceMappingURL=main.css.map */
