--- a/sprint-1/src/styles/main.css
+++ b/sprint-1/src/styles/main.css
@@ -269,4 +269,24 @@ h5 {
   margin-left: 5px;
   opacity: 0.5;
 }
+
+.next__video {
+  margin: 0 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.next__video .next__video-image {
+  width: 45%;
+  height: 100px;
+  border-radius: 4px;
+  margin-right: 5%;
+}
+
+.next__video .next__video-info {
+  width: 50%;
+}
 /*# sourceMappingURL=main.css.map */
