Finished some styling for tablet, last commit for evening

--- a/sprint-1/src/styles/main.css
+++ b/sprint-1/src/styles/main.css
@@ -96,7 +96,7 @@ h5 {
   margin-top: 8px;
 }
 
-.header .search-bar {
+.header .search-bar-text {
   background-image: url("../assets/Icons/svg/Icon-search.svg");
   background-repeat: no-repeat;
   background-position-x: 10px;
@@ -105,6 +105,50 @@ h5 {
   height: 49px;
   padding-left: 35px;
   border-radius: 4px;
+}
+
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 36px;
+    line-height: 44px;
+  }
+  h2 {
+    font-size: 24px;
+    line-height: 32px;
+  }
+  h3 {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  h4 {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  h5 {
+    font-size: 12px;
+    line-height: 20px;
+  }
+  .header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 80px;
+  }
+  .header .search-bar-text {
+    width: 30%;
+  }
+  .header__search-button {
+    width: 30%;
+    margin-top: 0;
+  }
+  .header__search-bar {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    height: 80px;
+  }
+  .header__search-avatar {
+    margin: 0;
+  }
 }
 
 .hero {
@@ -194,6 +238,29 @@ h5 {
   margin-bottom: 0;
   margin-top: 16px;
   padding-bottom: 24px;
+}
+
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 36px;
+    line-height: 44px;
+  }
+  h2 {
+    font-size: 24px;
+    line-height: 32px;
+  }
+  h3 {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  h4 {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  h5 {
+    font-size: 12px;
+    line-height: 20px;
+  }
 }
 
 .comments {
