--- a/sprint-1/src/styles/partials/_hero.scss
+++ b/sprint-1/src/styles/partials/_hero.scss
@@ -57,3 +57,27 @@
 		padding-bottom: 24px;
 	}
 }
+@include medium {
+	h1 {
+		font-size: 36px;
+		line-height: 44px;
+	}
+	h2 {
+		font-size: 24px;
+		line-height: 32px;
+	}
+	h3 {
+		font-size: 16px;
+		line-height: 24px;
+	}
+	h4 {
+		font-size: 14px;
+		line-height: 20px;
+	}
+	h5 {
+		font-size: 12px;
+		line-height: 20px;
+	}
+	.hero {
+	}
+}
