--- a/sprint-1/src/styles/main.css
+++ b/sprint-1/src/styles/main.css
@@ -135,19 +135,24 @@ h5 {
     height: 80px;
   }
   .header .search-bar-text {
-    width: 30%;
+    width: 50%;
   }
-  .header__search-button {
-    width: 30%;
+  .header .header__search-button {
+    width: 20%;
     margin-top: 0;
+    margin-left: 6%;
   }
-  .header__search-bar {
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+  .header .header__search-bar {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     height: 80px;
+    width: 70%;
+    margin-left: 24.5%;
   }
-  .header__search-avatar {
+  .header .header__search-avatar {
     margin: 0;
+    margin-left: 6%;
   }
 }
 
@@ -221,18 +226,18 @@ h5 {
           align-items: baseline;
 }
 
-.hero .hero__movie-paragraph {
+.hero__movie-paragraph {
   padding-top: 24px;
   border-top: 1px solid #d5d2d1;
   margin-top: 0;
 }
 
-.hero .hero__movie-heading-two {
+.hero__movie-heading-two {
   margin-right: 8px;
   margin-bottom: 16px;
 }
 
-.hero .hero__movie-heading-three {
+.hero__movie-heading-three {
   margin-right: 8px;
   margin-left: 8px;
   margin-bottom: 0;
@@ -260,6 +265,21 @@ h5 {
   h5 {
     font-size: 12px;
     line-height: 20px;
+  }
+  .hero {
+    margin-top: 0;
+  }
+  .hero__movie-heading-two {
+    margin-bottom: 24px;
+    margin-top: 24px;
+  }
+  .hero__movie-heading-three {
+    margin-bottom: 24px;
+    margin-top: 24px;
+    padding: 0;
+  }
+  .hero__movie-paragraph {
+    padding-top: 40px;
   }
 }
 
@@ -313,7 +333,7 @@ h5 {
   border-radius: 4px;
 }
 
-.comments .comments__input-div-avatar {
+.comments__input-div-avatar {
   width: 35px;
   height: 35px;
   border-radius: 50%;
@@ -321,24 +341,83 @@ h5 {
   float: left;
 }
 
-.comments .comments__input-div-info {
+.comments__input-div-info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 80%;
+  width: 90.3%;
 }
 
-.comments .comments__input-div-date {
+.comments__input-div-date {
   height: 20px;
   margin-top: 20px;
   margin-left: 5px;
   opacity: 0.5;
 }
 
-.next__video {
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 36px;
+    line-height: 44px;
+  }
+  h2 {
+    font-size: 24px;
+    line-height: 32px;
+  }
+  h3 {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  h4 {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  h5 {
+    font-size: 12px;
+    line-height: 20px;
+  }
+}
+
+.comments__input-div {
+  border-bottom: 1px solid #d5d2d1;
+}
+
+.comments__heading {
+  margin-top: 64px;
+}
+
+.comments__input-text {
+  width: 64.6%;
+  height: 40px;
+}
+
+.comments button {
+  width: 26.6%;
+  height: 40px;
+  margin: 0;
+  margin-left: 5%;
+}
+
+.comments__input-avatar {
+  margin: 0;
+  margin-left: 1%;
+}
+
+.comments__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #d5d2d1;
+}
+
+.next__video-main {
   margin: 0 5%;
+}
+
+.next__video-main .next__video {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -346,14 +425,48 @@ h5 {
       flex-wrap: wrap;
 }
 
-.next__video .next__video-image {
+.next__video-main .next__video-image {
   width: 45%;
   height: 100px;
   border-radius: 4px;
   margin-right: 5%;
 }
 
-.next__video .next__video-info {
+.next__video-main .next__video-info {
   width: 50%;
+}
+
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 36px;
+    line-height: 44px;
+  }
+  h2 {
+    font-size: 24px;
+    line-height: 32px;
+  }
+  h3 {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  h4 {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  h5 {
+    font-size: 12px;
+    line-height: 20px;
+  }
+  .next__video .next__video-image {
+    width: 17.5%;
+    margin-top: 20px;
+    height: 70px;
+  }
+  .next__video .next__video-info {
+    width: 21%;
+  }
+  .next__video-heading {
+    margin: 17px 0 0 0;
+  }
 }
 /*# sourceMappingURL=main.css.map */
