--- a/sprint-1/src/styles/partials/_comments.scss
+++ b/sprint-1/src/styles/partials/_comments.scss
@@ -36,22 +36,71 @@
 		background-color: $brainflixBlue;
 		border-radius: 4px;
 	}
-	.comments__input-div-avatar {
+	&__input-div-avatar {
 		width: 35px;
 		height: 35px;
 		border-radius: 50%;
 		margin: 8px 5px 32px;
 		float: left;
 	}
-	.comments__input-div-info {
+	&__input-div-info {
 		display: flex;
 		flex-wrap: wrap;
-		width: 80%;
+		width: 90.3%;
 	}
-	.comments__input-div-date {
+	&__input-div-date {
 		height: 20px;
 		margin-top: 20px;
 		margin-left: 5px;
 		opacity: 0.5;
+	}
+}
+@include medium {
+	h1 {
+		font-size: 36px;
+		line-height: 44px;
+	}
+	h2 {
+		font-size: 24px;
+		line-height: 32px;
+	}
+	h3 {
+		font-size: 16px;
+		line-height: 24px;
+	}
+	h4 {
+		font-size: 14px;
+		line-height: 20px;
+	}
+	h5 {
+		font-size: 12px;
+		line-height: 20px;
+	}
+}
+.comments {
+	&__input-div {
+		border-bottom: 1px solid $dividerColour;
+	}
+	&__heading {
+		margin-top: 64px;
+	}
+	&__input-text {
+		width: 64.6%;
+		height: 40px;
+	}
+	button {
+		width: 26.6%;
+		height: 40px;
+		margin: 0;
+		margin-left: 5%;
+	}
+	&__input-avatar {
+		margin: 0;
+		margin-left: 1%;
+	}
+	&__nav {
+		display: flex;
+		padding-bottom: 24px;
+		border-bottom: 1px solid $dividerColour;
 	}
 }
