--- a/sprint-1/src/styles/partials/_hero.scss
+++ b/sprint-1/src/styles/partials/_hero.scss
@@ -40,16 +40,16 @@
 		justify-content: space-evenly;
 		align-items: baseline;
 	}
-	.hero__movie-paragraph {
+	&__movie-paragraph {
 		padding-top: 24px;
 		border-top: 1px solid $dividerColour;
 		margin-top: 0;
 	}
-	.hero__movie-heading-two {
+	&__movie-heading-two {
 		margin-right: 8px;
 		margin-bottom: 16px;
 	}
-	.hero__movie-heading-three {
+	&__movie-heading-three {
 		margin-right: 8px;
 		margin-left: 8px;
 		margin-bottom: 0;
@@ -79,5 +79,18 @@
 		line-height: 20px;
 	}
 	.hero {
+		margin-top: 0;
+		&__movie-heading-two {
+			margin-bottom: 24px;
+			margin-top: 24px;
+		}
+		&__movie-heading-three {
+			margin-bottom: 24px;
+			margin-top: 24px;
+			padding: 0;
+		}
+		&__movie-paragraph {
+			padding-top: 40px;
+		}
 	}
 }
