--- a/sprint-1/src/styles/partials/_nextVideo.scss
+++ b/sprint-1/src/styles/partials/_nextVideo.scss
@@ -1,17 +1,19 @@
-.next__video-main {
-	margin: 0 5%;
-	.next__video {
-		display: flex;
-		flex-wrap: wrap;
-	}
-	.next__video-image {
-		width: 45%;
-		height: 100px;
-		border-radius: 4px;
-		margin-right: 5%;
-	}
-	.next__video-info {
-		width: 50%;
+.next__video {
+	display: flex;
+	flex-wrap: wrap;
+
+	.next__video-main {
+		margin: 0 5%;
+
+		.next__video-image {
+			width: 45%;
+			height: 100px;
+			border-radius: 4px;
+			margin-right: 5%;
+		}
+		.next__video-info {
+			width: 50%;
+		}
 	}
 }
 @include medium {
@@ -47,5 +49,15 @@
 		&-heading {
 			margin: 17px 0 0 0;
 		}
+	}
+}
+@include large {
+	.next__video-main {
+		width: 25.5%;
+	}
+	.next__video {
+		height: 70px;
+		width: 50%;
+		margin: 0;
 	}
 }
