--- a/sprint-1/src/styles/main.css
+++ b/sprint-1/src/styles/main.css
@@ -214,18 +214,6 @@ h5 {
       flex-wrap: wrap;
 }
 
-.hero .flex-movie-icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-}
-
 .hero__movie-paragraph {
   padding-top: 24px;
   border-top: 1px solid #d5d2d1;
@@ -357,6 +345,18 @@ h5 {
   opacity: 0.5;
 }
 
+.comments .flex-movie-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
 @media only screen and (min-width: 768px) {
   h1 {
     font-size: 36px;
@@ -415,7 +415,14 @@ h5 {
 
 @media only screen and (min-width: 1440px) {
   .comments {
+    margin: 0;
     width: 712px;
+  }
+  .comments__heading {
+    margin-top: 40px;
+  }
+  .comments__input-div {
+    width: 100%;
   }
 }
 
@@ -423,22 +430,20 @@ h5 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 
-.next__video .next__video-main {
+.next__video-main {
   margin: 0 5%;
 }
 
-.next__video .next__video-main .next__video-image {
+.next__video-image {
   width: 45%;
   height: 100px;
   border-radius: 4px;
   margin-right: 5%;
 }
 
-.next__video .next__video-main .next__video-info {
+.next__video-info {
   width: 50%;
 }
 
@@ -463,15 +468,15 @@ h5 {
     font-size: 12px;
     line-height: 20px;
   }
-  .next__video .next__video-image {
+  .next__video-image {
     width: 17.5%;
     margin-top: 20px;
     height: 70px;
   }
-  .next__video .next__video-info {
+  .next__video-info {
     width: 21%;
   }
-  .next__video-heading {
+  -heading {
     margin: 17px 0 0 0;
   }
 }
@@ -479,11 +484,20 @@ h5 {
 @media only screen and (min-width: 1440px) {
   .next__video-main {
     width: 25.5%;
+    margin: 0;
   }
   .next__video {
-    height: 70px;
-    width: 50%;
-    margin: 0;
+    margin: 35px 0 40px 5%;
+  }
+  .next__video-image {
+    width: 43.6%;
+    margin-top: 5px;
+  }
+  .next__video-info {
+    width: 56%;
+  }
+  .next__video-heading {
+    margin: 6px 0 5px 7%;
   }
 }
 
