--- a/sprint-1/src/styles/partials/_comments.scss
+++ b/sprint-1/src/styles/partials/_comments.scss
@@ -54,6 +54,11 @@
 		margin-left: 5px;
 		opacity: 0.5;
 	}
+	.flex-movie-icons {
+		display: flex;
+		justify-content: space-evenly;
+		align-items: baseline;
+	}
 }
 @include medium {
 	h1 {
@@ -106,6 +111,13 @@
 }
 @include large {
 	.comments {
+		margin: 0;
 		width: 712px;
+	}
+	.comments__heading {
+		margin-top: 40px;
+	}
+	.comments__input-div {
+		width: 100%;
 	}
 }
