--- a/sprint-1/src/styles/partials/_nextVideo.scss
+++ b/sprint-1/src/styles/partials/_nextVideo.scss
@@ -1,21 +1,19 @@
 .next__video {
 	display: flex;
-	flex-wrap: wrap;
-
-	.next__video-main {
-		margin: 0 5%;
-
-		.next__video-image {
-			width: 45%;
-			height: 100px;
-			border-radius: 4px;
-			margin-right: 5%;
-		}
-		.next__video-info {
-			width: 50%;
-		}
-	}
 }
+.next__video-main {
+	margin: 0 5%;
+}
+.next__video-image {
+	width: 45%;
+	height: 100px;
+	border-radius: 4px;
+	margin-right: 5%;
+}
+.next__video-info {
+	width: 50%;
+}
+
 @include medium {
 	h1 {
 		font-size: 36px;
@@ -37,27 +35,36 @@
 		font-size: 12px;
 		line-height: 20px;
 	}
-	.next__video {
-		.next__video-image {
-			width: 17.5%;
-			margin-top: 20px;
-			height: 70px;
-		}
-		.next__video-info {
-			width: 21%;
-		}
-		&-heading {
-			margin: 17px 0 0 0;
-		}
+
+	.next__video-image {
+		width: 17.5%;
+		margin-top: 20px;
+		height: 70px;
+	}
+	.next__video-info {
+		width: 21%;
+	}
+	&-heading {
+		margin: 17px 0 0 0;
 	}
 }
+
 @include large {
 	.next__video-main {
 		width: 25.5%;
+		margin: 0;
 	}
 	.next__video {
-		height: 70px;
-		width: 50%;
-		margin: 0;
+		margin: 35px 0 40px 5%;
+	}
+	.next__video-image {
+		width: 43.6%;
+		margin-top: 5px;
+	}
+	.next__video-info {
+		width: 56%;
+	}
+	.next__video-heading {
+		margin: 6px 0 5px 7%;
 	}
 }
