--- a/sprint-1/src/styles/partials/_hero.scss
+++ b/sprint-1/src/styles/partials/_hero.scss
@@ -30,12 +30,11 @@
 		justify-content: space-around;
 	}
 	&__movie-description {
-		margin: 0 5%;
 		display: flex;
 		justify-content: left;
 		flex-wrap: wrap;
 	}
-	
+
 	&__movie-paragraph {
 		padding-top: 24px;
 		border-top: 1px solid $dividerColour;
@@ -51,6 +50,9 @@
 		margin-bottom: 0;
 		margin-top: 16px;
 		padding-bottom: 24px;
+	}
+	&__info-div {
+		margin: 0 2%;
 	}
 }
 @include medium {
@@ -88,5 +90,17 @@
 		&__movie-paragraph {
 			padding-top: 40px;
 		}
+	}
+}
+@include large {
+	.hero {
+		height: 540px;
+		&__image {
+			height: 540px;
+		}
+	}
+	.hero__movie-heading-two,
+	.hero__movie-heading-three {
+		margin-top: 0;
 	}
 }
