--- a/sprint-1/src/styles/main.css
+++ b/sprint-1/src/styles/main.css
@@ -71,9 +71,6 @@ h5 {
 }
 
 .header__search-button {
-  background-image: url("../assets/Icons/svg/Icon-upload.svg");
-  background-repeat: no-repeat;
-  background-position: left;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -97,10 +94,6 @@ h5 {
 }
 
 .header .search-bar-text {
-  background-image: url("../assets/Icons/svg/Icon-search.svg");
-  background-repeat: no-repeat;
-  background-position-x: 10px;
-  background-position-y: center;
   width: 100%;
   height: 49px;
   padding-left: 35px;
@@ -456,10 +449,12 @@ h5 {
 }
 
 .next__video-image {
-  width: 45%;
-  height: 100px;
+  width: 120px;
+  height: 70px;
   border-radius: 4px;
   margin-right: 5%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .next__video-info {
@@ -488,7 +483,6 @@ h5 {
     line-height: 20px;
   }
   .next__video-image {
-    width: 17.5%;
     margin-top: 20px;
     height: 70px;
   }
@@ -510,7 +504,6 @@ h5 {
     height: 77px;
   }
   .next__video-image {
-    width: 43.6%;
     margin-top: 5px;
   }
   .next__video-info {
