--- a/sprint-1/src/styles/partials/_header.scss
+++ b/sprint-1/src/styles/partials/_header.scss
@@ -17,9 +17,6 @@
 	}
 
 	&__search-button {
-		background-image: url("../assets/Icons/svg/Icon-upload.svg");
-		background-repeat: no-repeat;
-		background-position: left;
 		display: flex;
 		justify-content: center;
 		width: 70%;
@@ -37,10 +34,10 @@
 		margin-top: 8px;
 	}
 	.search-bar-text {
-		background-image: url("../assets/Icons/svg/Icon-search.svg");
-		background-repeat: no-repeat;
-		background-position-x: 10px;
-		background-position-y: center;
+		// background-image: url("../assets/Icons/svg/Icon-search.svg");
+		// background-repeat: no-repeat;
+		// background-position-x: 10px;
+		// background-position-y: center;
 		width: 100%;
 		height: 49px;
 		padding-left: 35px;
