--- a/sprint-1/src/styles/partials/_nextVideo.scss
+++ b/sprint-1/src/styles/partials/_nextVideo.scss
@@ -6,10 +6,11 @@
 	margin: 0 5%;
 }
 .next__video-image {
-	width: 45%;
-	height: 100px;
+	width: 120px;
+	height: 70px;
 	border-radius: 4px;
 	margin-right: 5%;
+	object-fit: cover;
 }
 .next__video-info {
 	width: 50%;
@@ -38,7 +39,6 @@
 	}
 
 	.next__video-image {
-		width: 17.5%;
 		margin-top: 20px;
 		height: 70px;
 	}
@@ -60,7 +60,6 @@
 		height: 77px;
 	}
 	.next__video-image {
-		width: 43.6%;
 		margin-top: 5px;
 	}
 	.next__video-info {
