changed my comments to use the map function and fixed styles

--- a/sprint-1/src/styles/main.scss
+++ b/sprint-1/src/styles/main.scss
@@ -33,6 +33,7 @@ h5 {
 }
 @import "./partials/header";
 @import "./partials/hero";
+@import "./partials/movieDescription";
 @import "./partials/comments";
 @import "./partials/nextVideo";
 @import "./partials/main-flex";
