--- a/sprint-1/src/styles/main.css
+++ b/sprint-1/src/styles/main.css
@@ -195,36 +195,6 @@ h5 {
       justify-content: space-around;
 }
 
-.hero__movie-description {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.hero__movie-paragraph {
-  padding-top: 24px;
-  border-top: 1px solid #d5d2d1;
-  margin-top: 0;
-}
-
-.hero__movie-heading-two {
-  margin-right: 8px;
-  margin-bottom: 16px;
-}
-
-.hero__movie-heading-three {
-  margin-right: 8px;
-  margin-left: 8px;
-  margin-bottom: 0;
-  margin-top: 16px;
-  padding-bottom: 24px;
-}
-
 .hero__info-div {
   margin: 0 2%;
 }
@@ -253,29 +223,97 @@ h5 {
   .hero {
     margin-top: 0;
   }
-  .hero__movie-heading-two {
-    margin-bottom: 24px;
-    margin-top: 24px;
-  }
-  .hero__movie-heading-three {
-    margin-bottom: 24px;
-    margin-top: 24px;
-    padding: 0;
-  }
-  .hero__movie-paragraph {
-    padding-top: 40px;
-  }
 }
 
-@media only screen and (min-width: 1440px) {
+@media only screen and (min-width: 768px) and (min-width: 1440px) {
   .hero {
     height: 540px;
   }
   .hero__image {
     height: 540px;
   }
-  .hero__movie-heading-two,
-  .hero__movie-heading-three {
+}
+
+.movie__description {
+  margin: 0 4%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.movie__paragraph {
+  padding-top: 24px;
+  border-top: 1px solid #d5d2d1;
+  margin-top: 0;
+}
+
+.movie__heading-two {
+  margin-right: 8px;
+  margin-bottom: 16px;
+}
+
+.movie__heading-three {
+  margin-right: 8px;
+  margin-left: 8px;
+  margin-bottom: 0;
+  margin-top: 16px;
+  padding-bottom: 24px;
+}
+
+.flex-movie-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 36px;
+    line-height: 44px;
+  }
+  h2 {
+    font-size: 24px;
+    line-height: 32px;
+  }
+  h3 {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  h4 {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  h5 {
+    font-size: 12px;
+    line-height: 20px;
+  }
+  .movie__heading-two {
+    margin-bottom: 24px;
+    margin-top: 24px;
+  }
+  .movie__heading-three {
+    margin-bottom: 24px;
+    margin-top: 24px;
+    padding: 0;
+  }
+  .movie__movie-paragraph {
+    padding-top: 40px;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .movie__heading-two, .movie__heading-three {
     margin-top: 0;
   }
 }
@@ -352,18 +390,6 @@ h5 {
   margin-top: 20px;
   margin-left: 5px;
   opacity: 0.5;
-}
-
-.comments .flex-movie-icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
 }
 
 @media only screen and (min-width: 768px) {
