--- a/sprint-1/src/styles/partials/_comments.scss
+++ b/sprint-1/src/styles/partials/_comments.scss
@@ -1,5 +1,8 @@
 .comments {
 	margin: 0 5%;
+	&__nav {
+		display: inline-block;
+	}
 	&__heading {
 		margin-top: 40px;
 	}
@@ -54,7 +57,6 @@
 		margin-left: 5px;
 		opacity: 0.5;
 	}
-
 }
 @include medium {
 	h1 {
@@ -77,32 +79,33 @@
 		font-size: 12px;
 		line-height: 20px;
 	}
-}
-.comments {
-	&__input-div {
-		border-bottom: 1px solid $dividerColour;
-	}
-	&__heading {
-		margin-top: 64px;
-	}
-	&__input-text {
-		width: 64.6%;
-		height: 40px;
-	}
-	button {
-		width: 26.6%;
-		height: 40px;
-		margin: 0;
-		margin-left: 5%;
-	}
-	&__input-avatar {
-		margin: 0;
-		margin-left: 1%;
-	}
-	&__nav {
-		display: flex;
-		padding-bottom: 24px;
-		border-bottom: 1px solid $dividerColour;
+
+	.comments {
+		&__input-div {
+			border-bottom: 1px solid $dividerColour;
+		}
+		&__heading {
+			margin-top: 64px;
+		}
+		&__input-text {
+			width: 64.6%;
+			height: 40px;
+		}
+		button {
+			width: 26.6%;
+			height: 40px;
+			margin: 0;
+			margin-left: 5%;
+		}
+		&__input-avatar {
+			margin: 0;
+			margin-left: 1%;
+		}
+		&__nav {
+			display: flex;
+			padding-bottom: 24px;
+			border-bottom: 1px solid $dividerColour;
+		}
 	}
 }
 @include large {
