--- a/sprint-1/src/styles/main.css
+++ b/sprint-1/src/styles/main.css
@@ -7,7 +7,7 @@
 html,
 body {
   margin: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: "AvenirRegular";
   line-height: 1.8rem;
   height: 100vh;
   -webkit-box-sizing: border-box;
@@ -151,11 +151,13 @@ h5 {
 
 .hero {
   width: 100vw;
+  height: 189px;
   margin-top: 16px;
 }
 
 .hero__video {
   width: 100%;
+  height: 189px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -181,6 +183,10 @@ h5 {
   }
   .hero {
     margin-top: 0;
+    height: 433px;
+  }
+  .hero__video {
+    height: 433px;
   }
 }
 
@@ -211,19 +217,6 @@ h5 {
   margin-top: 0;
 }
 
-.movie__heading-two {
-  margin-right: 8px;
-  margin-bottom: 16px;
-}
-
-.movie__heading-three {
-  margin-right: 8px;
-  margin-left: 8px;
-  margin-bottom: 0;
-  margin-top: 16px;
-  padding-bottom: 24px;
-}
-
 .flex-movie-icons {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -231,9 +224,7 @@ h5 {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  height: 20px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -257,17 +248,8 @@ h5 {
     font-size: 12px;
     line-height: 20px;
   }
-  .movie__heading-two {
-    margin-bottom: 24px;
-    margin-top: 24px;
-  }
-  .movie__heading-three {
-    margin-bottom: 24px;
-    margin-top: 24px;
-    padding: 0;
-  }
-  .movie__movie-paragraph {
-    padding-top: 40px;
+  .movie__description {
+    margin: 40px 4%;
   }
 }
 
@@ -311,7 +293,13 @@ h5 {
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  margin: 8px 5px 32px;
+  margin: 15px 5px 15px;
+}
+
+.comments__input-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .comments button {
@@ -425,6 +413,7 @@ h5 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 20px 0 20px 0;
 }
 
 .next__video-main {
@@ -442,6 +431,10 @@ h5 {
 
 .next__video-info {
   width: 50%;
+}
+
+.next__video-heading {
+  margin: 0;
 }
 
 @media only screen and (min-width: 768px) {
