--- a/sprint-1/src/styles/main.scss
+++ b/sprint-1/src/styles/main.scss
@@ -4,7 +4,7 @@
 html,
 body {
 	margin: 0;
-	font-family: "Nunito", sans-serif;
+	font-family: "AvenirRegular";
 	line-height: 1.8rem;
 	height: 100vh;
 	box-sizing: border-box;
