--- a/sprint-1/src/styles/partials/_comments.scss
+++ b/sprint-1/src/styles/partials/_comments.scss
@@ -25,7 +25,10 @@
 		width: 35px;
 		height: 35px;
 		border-radius: 50%;
-		margin: 8px 5px 32px;
+		margin: 15px 5px 15px;
+	}
+	&__input-div {
+		display: flex;
 	}
 	button {
 		display: flex;
