--- a/sprint-1/src/styles/partials/_hero.scss
+++ b/sprint-1/src/styles/partials/_hero.scss
@@ -1,8 +1,10 @@
 .hero {
 	width: 100vw;
+	height: 189px;
 	margin-top: 16px;
 	&__video {
 		width: 100%;
+		height: 189px;
 	}
 }
 @include medium {
@@ -28,6 +30,10 @@
 	}
 	.hero {
 		margin-top: 0;
+		height: 433px;
+		&__video {
+			height: 433px;
+		}
 	}
 	@include large {
 		.hero {
