--- a/sprint-1/src/styles/partials/_movieDescription.scss
+++ b/sprint-1/src/styles/partials/_movieDescription.scss
@@ -10,22 +10,22 @@
 		border-top: 1px solid $dividerColour;
 		margin-top: 0;
 	}
-	&__heading-two {
-		margin-right: 8px;
-		margin-bottom: 16px;
-	}
-	&__heading-three {
-		margin-right: 8px;
-		margin-left: 8px;
-		margin-bottom: 0;
-		margin-top: 16px;
-		padding-bottom: 24px;
-	}
+	// &__heading-two {
+	// 	margin-right: 8px;
+	// 	margin-bottom: 16px;
+	// }
+	// &__heading-three {
+	// 	margin-right: 8px;
+	// 	margin-left: 8px;
+	// 	margin-bottom: 0;
+	// 	margin-top: 16px;
+	// 	padding-bottom: 24px;
+	// }
 }
 .flex-movie-icons {
 	display: flex;
 	justify-content: space-evenly;
-	align-items: baseline;
+	height: 20px;
 }
 @include medium {
 	h1 {
@@ -49,18 +49,16 @@
 		line-height: 20px;
 	}
 	.movie {
-		&__heading-two {
-			margin-bottom: 24px;
-			margin-top: 24px;
+		&__description {
+			margin: 40px 4%;
 		}
-		&__heading-three {
-			margin-bottom: 24px;
-			margin-top: 24px;
-			padding: 0;
-		}
-		&__movie-paragraph {
-			padding-top: 40px;
-		}
+		// &__heading-two,
+		// &__heading-three {
+		// 	margin: 0;
+		// }
+		// &__movie-paragraph {
+		// 	padding-top: 40px;
+		// }
 	}
 }
 @include large {
