--- a/sprint-1/src/styles/partials/_nextVideo.scss
+++ b/sprint-1/src/styles/partials/_nextVideo.scss
@@ -62,16 +62,17 @@
 		margin: 0 2%;
 	}
 	.next__video {
-		margin-top: 37px;
-		height: 77px;
+		margin: 20px 0;
 	}
 	.next__video-image {
 		margin-top: 5px;
 	}
 	.next__video-info {
 		width: 56%;
+		height: 83px;
 	}
 	.next__video-heading {
-		margin: 6px 0 5px 7%;
+		margin: 0;
+		height: 20px;
 	}
 }
