--- a/sprint-1/src/styles/partials/_comments.scss
+++ b/sprint-1/src/styles/partials/_comments.scss
@@ -1,5 +1,4 @@
 .comments {
-	margin: 0 5%;
 	&__nav {
 		display: inline-block;
 	}
@@ -87,6 +86,10 @@
 		&__input-div {
 			border-bottom: 1px solid $dividerColour;
 		}
+		&__input-heading {
+			margin-left: 7.7%;
+		}
+
 		&__heading {
 			margin-top: 64px;
 		}
@@ -115,9 +118,10 @@
 	.comments {
 		margin: 0 2%;
 		width: 712px;
-	}
-	.comments__heading {
-		margin-top: 40px;
+
+		&__heading {
+			margin-top: 40px;
+		}
 	}
 	.comments__input-div {
 		width: 100%;
