--- a/sprint-1/src/styles/partials/_fonts.scss
+++ b/sprint-1/src/styles/partials/_fonts.scss
@@ -1,17 +1,17 @@
 @font-face {
-	src: url("../../assets/fonts/avenir/avenirRegular.otf");
-	font-family: "AvenirRegular";
+	src: url("../assets/fonts/avenir/avenirLight.otf");
+	font-family: "AvenirLight";
 	font-style: normal;
 }
 
 @font-face {
-	src: url("../../assets/fonts/avenir/avenirBold.otf");
+	src: url("../assets/fonts/avenir/avenirBold.otf");
 	font-family: "AvenirBold";
 	font-style: normal;
 }
 
 @font-face {
-	src: url("../../assets/fonts/avenir/avenirLight.otf");
-	font-family: "AvenirLight";
+	src: url("../assets/fonts/avenir/avenirRegular.otf");
+	font-family: "AvenirRegular";
 	font-style: normal;
 }
