--- a/sprint-1/src/styles/partials/_fonts.scss
+++ b/sprint-1/src/styles/partials/_fonts.scss
@@ -15,3 +15,8 @@
 	font-family: "AvenirRegular";
 	font-style: normal;
 }
+@font-face {
+	src: url("../assets/fonts/avenir/avenirULight.otf");
+	font-family: "AvenirULight";
+	font-weight: bold;
+}
