--- a/sprint-1/src/styles/main.css
+++ b/sprint-1/src/styles/main.css
@@ -22,6 +22,12 @@
   font-style: normal;
 }
 
+@font-face {
+  src: url("../assets/fonts/avenir/avenirULight.otf");
+  font-family: "AvenirULight";
+  font-weight: bold;
+}
+
 html,
 body {
   margin: 0;
@@ -75,7 +81,7 @@ h5 {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 5px;
-  height: 48px;
+  height: 38px;
 }
 
 .header__search-bar {
@@ -107,7 +113,7 @@ h5 {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  margin-left: 4%;
+  margin-left: 5.6%;
   margin-top: 8px;
 }
 
@@ -169,13 +175,12 @@ h5 {
 
 .hero {
   width: 100vw;
-  height: 189px;
-  margin-top: 16px;
+  height: 183px;
 }
 
 .hero__video {
   width: 100%;
-  height: 189px;
+  height: 183px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -237,16 +242,29 @@ h5 {
 .movie__icons {
   height: 20px;
   margin-top: 4px;
-  margin-right: 2%;
+  margin-right: 2.8%;
 }
 
-.movie__heading, .movie__heading-three {
+.movie__heading {
   margin-top: 0;
   margin-right: 19px;
+  font-family: "AvenirBold";
+}
+
+.movie__heading-three {
+  margin: 0 6.5% 24px 0;
+  font-family: "AvenirULight";
 }
 
 .movie__heading-two {
-  margin-right: 15%;
+  margin-right: 2.8%;
+  font-family: "AvenirBold";
+}
+
+.movie__heading-two-special {
+  margin-right: 20%;
+  font-family: "AvenirULight";
+  opacity: 0.6;
 }
 
 .main-movie-div {
@@ -286,18 +304,30 @@ h5 {
   }
   .movie__heading {
     margin-right: 33px;
+    margin-bottom: 24px;
   }
   .movie__heading-two {
-    margin-top: 10px;
+    margin-top: 0;
+    margin-bottom: 0;
     margin-left: 1%;
     height: 24px;
   }
   .movie__heading-three {
     margin-right: 4%;
-    margin-left: 1%;
+    margin-bottom: 0;
+    margin-left: 1.14%;
   }
-  __icons {
+  .movie__heading-two-special {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .movie__icons {
     height: 24px;
+    margin-right: 0;
+    margin-top: 1px;
+  }
+  .movie__paragraph {
+    margin-top: 24px;
   }
 }
 
@@ -305,8 +335,8 @@ h5 {
   .movie__heading {
     margin-right: 123px;
   }
-  .movie__heading-two {
-    margin-top: 16px;
+  .movie__heading-two-special {
+    margin-right: 39%;
   }
   .main-movie-div {
     margin: 0;
@@ -366,7 +396,7 @@ h5 {
   width: 70%;
   height: 48px;
   border-radius: 4px;
-  margin: 8px 0 24px 20%;
+  margin: 14px 0 24px 20%;
   border-bottom: 2px solid #d5d2d1;
   color: #fff;
   background-color: #0095ff;
@@ -423,16 +453,18 @@ h5 {
   }
   .comments__heading {
     margin-top: 64px;
+    margin-bottom: 32px;
   }
   .comments__input-text {
-    width: 64.6%;
+    width: 78%;
     height: 40px;
   }
   .comments button {
-    width: 26.6%;
+    width: 25.71%;
     height: 40px;
     margin: 0;
-    margin-left: 5%;
+    margin-left: 2.3%;
+    margin-right: 5.7%;
   }
   .comments__input-avatar {
     margin: 0;
@@ -473,11 +505,16 @@ h5 {
   margin: 0 5%;
 }
 
+.next__video-main-heading {
+  opacity: 0.6;
+  margin: 40px 0;
+}
+
 .next__video-image {
   width: 120px;
   height: 70px;
   border-radius: 4px;
-  margin-right: 5%;
+  margin-right: 5.6%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -488,6 +525,12 @@ h5 {
 
 .next__video-heading {
   margin: 0;
+}
+
+.next__video-heading-bold {
+  margin: 0;
+  font-weight: bolder;
+  padding-bottom: 16px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -534,8 +577,13 @@ h5 {
   .next__video {
     margin: 20px 0;
   }
+  .next__video-main {
+    margin: 0;
+    width: 44%;
+    margin-left: 2%;
+  }
   .next__video-image {
-    margin-top: 5px;
+    margin-top: 0;
   }
   .next__video-info {
     width: 56%;
@@ -545,6 +593,9 @@ h5 {
     margin: 0;
     height: 20px;
   }
+  .next__video-heading-bold {
+    padding-bottom: 0;
+  }
 }
 
 @media only screen and (min-width: 1440px) {
@@ -553,6 +604,9 @@ h5 {
     display: -ms-flexbox;
     display: flex;
     margin: 40px 12.5% 0 12.5%;
+  }
+  .main-movie-div {
+    width: 66%;
   }
 }
 /*# sourceMappingURL=main.css.map */
