--- a/sprint-1/src/styles/partials/_nextVideo.scss
+++ b/sprint-1/src/styles/partials/_nextVideo.scss
@@ -5,12 +5,16 @@
 
 	&-main {
 		margin: 0 5%;
+		&-heading {
+			opacity: 0.6;
+			margin: 40px 0;
+		}
 	}
 	&-image {
 		width: 120px;
 		height: 70px;
 		border-radius: 4px;
-		margin-right: 5%;
+		margin-right: 5.6%;
 		object-fit: cover;
 	}
 	&-info {
@@ -18,6 +22,11 @@
 	}
 	&-heading {
 		margin: 0;
+	}
+	&-heading-bold {
+		margin: 0;
+		font-weight: bolder;
+		padding-bottom: 16px;
 	}
 }
 @include medium {
@@ -44,15 +53,17 @@
 	.next__video {
 		padding: 8px 0px;
 		height: 88px;
-	}
-	.next__video-image {
-		height: 70px;
-	}
-	.next__video-info {
-		width: 21%;
-	}
-	.next__video-heading {
-		margin: 0;
+
+		&-image {
+			height: 70px;
+		}
+
+		&-info {
+			width: 21%;
+		}
+		&-heading {
+			margin: 0;
+		}
 	}
 }
 
@@ -63,16 +74,25 @@
 	}
 	.next__video {
 		margin: 20px 0;
-	}
-	.next__video-image {
-		margin-top: 5px;
-	}
-	.next__video-info {
-		width: 56%;
-		height: 83px;
-	}
-	.next__video-heading {
-		margin: 0;
-		height: 20px;
+		&-main {
+			margin: 0;
+			width: 44%;
+			margin-left: 2%;
+		}
+		&-image {
+			margin-top: 0;
+		}
+		&-info {
+			width: 56%;
+			height: 83px;
+		}
+		&-heading {
+			margin: 0;
+			height: 20px;
+
+			&-bold {
+				padding-bottom: 0;
+			}
+		}
 	}
 }
