--- a/sprint-1/src/styles/partials/_header.scss
+++ b/sprint-1/src/styles/partials/_header.scss
@@ -1,5 +1,5 @@
 .header {
-	margin: 10px 5% 0 5%;
+	margin: 0 5%;
 	height: 169px;
 
 	&__search-logo {
@@ -34,10 +34,6 @@
 		margin-top: 8px;
 	}
 	.search-bar-text {
-		// background-image: url("../assets/Icons/svg/Icon-search.svg");
-		// background-repeat: no-repeat;
-		// background-position-x: 10px;
-		// background-position-y: center;
 		width: 100%;
 		height: 49px;
 		padding-left: 35px;
@@ -68,24 +64,39 @@
 	.header {
 		display: flex;
 		height: 80px;
+		padding-bottom: 16px;
+		margin-left: 5%;
+		margin-right: 5%;
 
-		.search-bar-text {
-			width: 50%;
-		}
-		.header__search-button {
+		&__search-button {
 			width: 20%;
-			margin-top: 0;
 			margin-left: 6%;
+			margin-top: 16px;
 		}
-		.header__search-bar {
+		&__search-bar {
 			justify-content: flex-start;
 			height: 80px;
 			width: 70%;
-			margin-left: 24.5%;
+			margin-left: 28.5%;
 		}
-		.header__search-avatar {
+
+		&__search-avatar {
 			margin: 0;
-			margin-left: 6%;
+			margin-top: 15px;
+			margin-left: 8.5%;
+		}
+		&__search-logo {
+			margin-top: 20px;
+		}
+		.search-bar-text {
+			width: 50%;
+			margin-top: 16px;
+		}
+	}
+	@include large {
+		.header {
+			margin-left: 12.5%;
+			margin-right: 12.5%;
 		}
 	}
 }
