--- a/sprint-1/src/styles/partials/_nextVideo.scss
+++ b/sprint-1/src/styles/partials/_nextVideo.scss
@@ -1,7 +1,7 @@
 .next__video {
 	display: flex;
 	align-items: center;
-	margin: 20px 0 20px 0;
+	margin: 24px 0;
 
 	&-main {
 		&-heading {
@@ -52,6 +52,7 @@
 	.next__video {
 		padding: 8px 0px;
 		height: 88px;
+		margin: 10px 0;
 
 		&-image {
 			height: 70px;
@@ -71,7 +72,7 @@
 		width: 25.5%;
 	}
 	.next__video {
-		margin: 17px 0;
+		margin: 27.1px 0 0 0;
 		&-main {
 			margin-left: 2%;
 			width: 44%;
