--- a/sprint-1/src/styles/partials/_comments.scss
+++ b/sprint-1/src/styles/partials/_comments.scss
@@ -4,9 +4,12 @@
 	}
 	&__nav {
 		display: inline-block;
+		width: 100%;
+		border-bottom: 1px solid $dividerColour;
 	}
 	&__heading {
 		margin-top: 40px;
+		margin-bottom: 0;
 	}
 	&__input {
 		width: 100%;
@@ -19,27 +22,26 @@
 	}
 	&__input-text {
 		border: 1px solid #0065ad;
-		width: 70%;
-		margin-left: 12px;
+		width: 84%;
 		border-radius: 4px;
 	}
 	&__input-avatar {
 		width: 35px;
 		height: 35px;
 		border-radius: 50%;
-		margin: 15px 5px 15px;
+		margin: 0 11px 36px 0;
 	}
+
 	&__input-div {
 		display: flex;
 	}
 	button {
 		display: flex;
 		justify-content: center;
-		width: 70%;
+		width: 84%;
 		height: 48px;
 		border-radius: 4px;
-		margin: 14px 0 24px 20%;
-		border-bottom: 2px solid $dividerColour;
+		margin: 14px 0 24px 16%;
 		color: #fff;
 		background-color: $brainflixBlue;
 		border-radius: 4px;
@@ -49,7 +51,6 @@
 		height: 35px;
 		border-radius: 50%;
 		margin: 8px 5px 32px;
-		float: left;
 	}
 	&__input-div-info {
 		display: flex;
@@ -61,6 +62,11 @@
 		margin-top: 20px;
 		margin-left: 5px;
 		opacity: 0.5;
+	}
+	&__flex {
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
 	}
 }
 @include medium {
@@ -107,12 +113,22 @@
 		}
 		&__input-avatar {
 			margin: 0;
-			margin-left: 1%;
+			margin-right: 1%;
 		}
 		&__nav {
 			display: flex;
 			padding-bottom: 24px;
 			border-bottom: 1px solid $dividerColour;
+		}
+		&__input-div-avatar {
+			margin-right: 2px;
+			margin-left: 1px;
+		}
+		&__input-div-paragraph {
+			margin-top: 0;
+		}
+		&__flex {
+			justify-content: start;
 		}
 	}
 }
@@ -126,9 +142,6 @@
 
 		&__input-div {
 			width: 100%;
-		}
-		&__input-div-paragraph {
-			margin-top: 0;
 		}
 	}
 }
