--- a/sprint-1/src/styles/partials/_header.scss
+++ b/sprint-1/src/styles/partials/_header.scss
@@ -39,6 +39,9 @@
 		padding-left: 35px;
 		border-radius: 4px;
 	}
+	.plusSign {
+		padding-right: 5%;
+	}
 }
 @include medium {
 	h1 {
@@ -69,7 +72,7 @@
 		margin-right: 5%;
 
 		&__search-button {
-			width: 20%;
+			width: 24%;
 			margin-left: 6%;
 			margin-top: 16px;
 		}
@@ -83,7 +86,7 @@
 		&__search-avatar {
 			margin: 0;
 			margin-top: 15px;
-			margin-left: 8.5%;
+			margin-left: 6.5%;
 		}
 		&__search-logo {
 			margin-top: 20px;
